added frames for dogs' profiles

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,10 +51,27 @@
               an image from the device.
           -->
           <input type="file" name="dogimage" accept="image/png, image/jpeg"
-            capture value="UPLOAD IMAGE">
-          <input type="text" value="Current location">
+            value="UPLOAD IMAGE" capture>
+          <input type="text" name="zipcode" placeholder="zip code">
           <input type="submit" value="GO">
         </form>
+      </div>
+      <div id="dogs_container">
+        <div class="dog_profile">
+          <a href="#"><img src="../static/dogs/dog1.png" alt="dog picture"></a>
+          <a href="#">Charlie</a>
+          <a href="#"><img src="../static/like_sign_2x.png" width="45" alt="Add to favorites"></a>
+        </div>
+        <div class="dog_profile">
+          <a href="#"><img src="../static/dogs/dog1.png" alt="dog picture"></a>
+          <a href="#">Archie</a>
+          <a href="#"><img src="../static/like_sign_2x.png" width="45" alt="Add to favorites"></a>
+        </div>
+        <div class="dog_profile">
+          <a href="#"><img src="../static/dogs/dog1.png" alt="dog picture"></a>
+          <a href="#">Rosie</a>
+          <a href="#"><img src="../static/like_sign_2x.png" width="45" alt="Add to favorites"></a>
+        </div>
       </div>
     </div>
     <div id="footer"></div>
