--- a/templates/index.html
+++ b/templates/index.html
@@ -74,6 +74,7 @@
         </div>
       </div>
     </div>
+    <!-- Need to set a background for footer -->
     <div id="footer"></div>
   </div>
 </body>
