--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
   </nav>
 
   <div class="container">
-    <div class="row hero">
+    <div class="row hero d-none d-lg-block">
       <div class="col-md-6 vpad"></div>
       <div class="col-md-6"></div>
       <div class="col-md-6"></div>
@@ -45,8 +45,10 @@
     </div>
     <div class="row mt-5">
       <div class="col-xs-12 feature text-center">
-        <button class="btn btn-primary m-3">UPLOAD IMAGE</button>
         <form>
+          <input type="file" name="dogimage" accept="image/png, image/jpeg"
+            value="UPLOAD IMAGE" capture class="btn btn-primary">
+          <!-- <button class="btn btn-primary m-3">UPLOAD IMAGE</button> -->
           <div class="input-group">
             <input type="text" class="form-control m-3" placeholder="ZIPCODE">
             <div class="input-group-btn m-3">
@@ -112,10 +114,10 @@
               <a href="#"><img src="../static/like_sign_2x.png" width="15%" alt="Add to favorites"></a>
           </div>
         </div>
-      </div>      
+      </div>
     </div>
   </div>
-  
+
 
   <!-- <div id="app">
     <div class="jumbotron text-center" id="header">
@@ -140,7 +142,7 @@
         <li>
           <button>Log out</button>
         </li>
-       
+
       </ul>
     </div> -->
 <!--     <div id="body">
@@ -157,7 +159,7 @@
           Can't change "Choose file" to "UPLOAD IMAGE"
               Have an interesting attribute 'capture' to capture
               an image from the device.
-         
+
           <input type="file" name="dogimage" accept="image/png, image/jpeg"
             value="UPLOAD IMAGE" capture>
           <input type="text" name="zipcode" placeholder="zip code">
