--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,8 +7,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto">
-      <a class="nav-item nav-link active" href="#">quisque <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">rutrum</a>
+      <a class="nav-item nav-link active" href="{{url_for('home')}}">Home<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="{{url_for('signup')}}">Sign up</a>
       <a class="nav-item nav-link" href="#">porta</a>
       <a class="nav-item nav-link" href="#">Vehicula</a>
     </div>
