--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,15 +11,29 @@
     <p><input type="text" name="password"></p>
     <input type="submit" value="Sign up">
 </form> -->
+<div class='container'>
+    <form method='POST'>
+        <div class='form-group'>
+            {{form.hidden_tag()}}
+            <label for="usernameInput">Username:</label>
+            <br>
+            {{form.username}}
+        </div>
+        <div class='form-group'>
+            <label for="usernameInput">Email:</label>
+            <br>
+            {{form.email}}
+        </div>
+        <div class='form-group'>
+            <label for="usernameInput">Password:</label>
+            <br>
+            {{form.password}}
+        </div>
+        <div class='form-group'>
+            {{form.submit()}}
+        </div>
+            
+    </form>
+</div>
 
-<form method='POST'>
-    {{form.hidden_tag()}}
-    {{form.username.label}}{{form.username}}
-    <br>
-    {{form.email.label}}{{form.email}}
-    <br>
-    {{form.password.label}}{{form.password}}
-    <br>
-    {{form.submit()}}
-</form>
 {%endblock%}
