--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% include "navbar.html" %}
-
+{% from "_formhelpers.html" import render_field %}
 {%block content%}
 <h1> Welcome to the sign up page!</h1>
 <p>Fill out your email address and password to sign up!</p>
@@ -12,22 +12,17 @@
     <input type="submit" value="Sign up">
 </form> -->
 <div class='container'>
-    <form method='POST'>
+    <form method='POST' action='signup'>
+        {{ form.csrf_token}}
         <div class='form-group'>
             {{form.hidden_tag()}}
-            <label for="usernameInput">Username:</label>
-            <br>
-            {{form.username}}
+            {{ render_field(form.username) }}
         </div>
         <div class='form-group'>
-            <label for="usernameInput">Email:</label>
-            <br>
-            {{form.email}}
+            {{ render_field(form.email) }}
         </div>
         <div class='form-group'>
-            <label for="usernameInput">Password:</label>
-            <br>
-            {{form.password}}
+            {{ render_field(form.password) }}
         </div>
         <div class='form-group'>
             {{form.submit()}}
