--- a/templates/_formhelpers.html
+++ b/templates/_formhelpers.html
@@ -3,7 +3,7 @@
   <dd>{{ field(**kwargs)|safe }}
   {% if field.errors %}
     {% for error in field.errors %}
-      <div class="alert alert-warning alert-dismissible fade show col-md-3" role="alert">
+      <div class="alert alert-warning alert-dismissible fade show " role="alert">
           {{ error }}
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
