--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -2,7 +2,7 @@
 {% include "navbar.html" %}
 
 {%block content%}
-<div class="login_jumbotron">
+<div class="jumbotron">
     <h1>Welcome!</h1>
     <p>{{session['username']}}</p>
 
