--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,9 +8,15 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto">
       <a class="nav-item nav-link active" href="{{url_for('home')}}">Home<span class="sr-only">(current)</span></a>
+      {% if current_user.is_authenticated %}
+      <a class="nav-item nav-link" href="{{url_for('logout')}}">Log out</a>
+      <a class="nav-item nav-link" href="#">My Page</a>
+      {% else %}
       <a class="nav-item nav-link" href="{{url_for('signup')}}">Sign up</a>
       <a class="nav-item nav-link" href="{{url_for('login')}}">Log in</a>
-      <a class="nav-item nav-link" href="#">Vehicula</a>
+      <a class="nav-item nav-link" href="#">About</a>
+      {% endif %}
+      
     </div>
   </div>
 </nav>
