--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,9 @@
 </head>
 <body>
   {% block content %}
+  {% if current_user.is_authenticated %}
+  <p>Hi {{current_user.username}}</p>
+  {% endif %}
   {% endblock %}
   <footer class="footer"></footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
