--- a/templates/login.html
+++ b/templates/login.html
@@ -3,5 +3,11 @@
 {% from "_formhelpers.html" import render_field %}
 {%block content%}
 <h1 class='text-center'> Welcome to the login page!</h1>
+<form method="post">
+    {{form.hidden_tag()}}
+    {{form.email.label}}{{form.email()}}<br>
+    {{form.password.label}}{{form.password()}}<br>
+    {{form.submit()}}
+</form>
 
 {%endblock%}
