--- a/templates/signup.html
+++ b/templates/signup.html
@@ -18,6 +18,9 @@
             {{ render_field(form.password) }}
         </div>
         <div class='form-group'>
+                {{ render_field(form.pass_confirm) }}
+            </div>
+        <div class='form-group'>
             {{form.submit()}}
         </div>
             
