--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -3,8 +3,8 @@
 
 {%block content%}
 <div class="jumbotron">
-    <h1>Welcome!</h1>
-    <p>{{session['username']}}</p>
+    <h1>Welcome!{{current_user.username}}</h1>
+    
 
 </div>
 {%endblock%}
