--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{{url_for('home')}}">
+  <a class="navbar-brand" href="{{url_for('index')}}">
     <img src="../static/logo_big.png" width="129px" height="42px" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,7 +7,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto">
-      <a class="nav-item nav-link active" href="{{url_for('home')}}">Home<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link active" href="{{url_for('index')}}">Home<span class="sr-only">(current)</span></a>
       {% if current_user.is_authenticated %}
       <a class="nav-item nav-link" href="{{url_for('logout')}}">Log out</a>
       <a class="nav-item nav-link" href="#">My Page</a>
@@ -18,5 +18,6 @@
       {% endif %}
       
     </div>
+
   </div>
 </nav>
