--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,6 +2,14 @@
 {% include "navbar.html" %}
 {% from "_formhelpers.html" import render_field %}
 {%block content%}
+{% for message in get_flashed_messages()%}
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+    <strong>{{message}}</strong> 
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+{% endfor %}
 <h1 class='text-center'> Welcome to the sign up page!</h1>
 <div>
 <div class='container'>
