--- a/templates/login.html
+++ b/templates/login.html
@@ -2,12 +2,27 @@
 {% include "navbar.html" %}
 {% from "_formhelpers.html" import render_field %}
 {%block content%}
+{% for message in get_flashed_messages()%}
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+    <strong>{{message}}</strong> 
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+{% endfor %}
 <h1 class='text-center'> Welcome to the login page!</h1>
-<form method="post">
+<form method="post" style='width:200px; margin:auto'>
     {{form.hidden_tag()}}
-    {{form.email.label}}{{form.email()}}<br>
-    {{form.password.label}}{{form.password()}}<br>
-    {{form.submit()}}
+    <div class='form-group'>
+        {{ render_field(form.email) }}
+    </div>
+    <div class='form-group'>
+        {{ render_field(form.password) }}
+    </div>
+
+    <div class='form-group'>
+        {{form.submit()}}
+    </div>
 </form>
 
 {%endblock%}
