--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,14 @@
 {% block content %}
     <!-- Navigation -->
 {% include "navbar.html" %}
+{% for message in get_flashed_messages()%}
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+    <strong>{{message}}</strong> 
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+{% endfor %}
   <div class="container">
     <div class="row hero d-none d-lg-block">
       <div class="col-md-6 vpad"></div>
