--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
-{% block content %}
+
     <!-- Navigation -->
 {% include "navbar.html" %}
+{% block content %}
 {% for message in get_flashed_messages()%}
 <div class="alert alert-warning alert-dismissible fade show" role="alert">
     <strong>{{message}}</strong> 
@@ -23,15 +24,14 @@
     </div>
     <div class="row mt-5">
       <div class="col-xs-12 feature text-center">
-        <form>
-          <input type="file" name="dogimage" accept="image/png, image/jpeg"
-            value="UPLOAD IMAGE" capture class="btn btn-primary">
-          <!-- <button class="btn btn-primary m-3">UPLOAD IMAGE</button> -->
+        <form method=post enctype=multipart/form-data>
+          <input type=file name=file value="Upload Image" class="btn btn-primary">
+         <!--  <input type=submit value="Upload Image" class="btn btn-primary"> -->
           <div class="input-group">
             <input type="text" class="form-control m-3" placeholder="ZIPCODE">
             <div class="input-group-btn m-3">
               <button class="btn btn-primary" type="submit">
-                Go
+                Submit
               </button>
             </div>
           </div>
