Relocated model output to index, modified target image folder.

--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -7,6 +7,6 @@
 	<h1>It is a {{ breed }}!</h1>
 </div>
 <div class="d-flex justify-content-center">
-	<img src="/static/{{ path }}">
+	<img src="/static/tmp/{{ path }}">
 </div>
 {%endblock%}
