--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,18 @@
 
     <!-- Navigation -->
 {% include "navbar.html" %}
+
 {% block content %}
+
+{% if breed is defined %}
+<script>
+  window.location.hash = "#" + "prediction";
+</script>
+{% endif %}
+
 {% for message in get_flashed_messages()%}
 <div class="alert alert-warning alert-dismissible fade show" role="alert">
-    <strong>{{message}}</strong> 
+    <strong>{{message}}</strong>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
     </button>
@@ -24,6 +32,16 @@
     </div>
     <div class="row mt-5">
       <div class="col-xs-12 feature text-center">
+        <a name="prediction">
+        {% if breed is defined %}
+        <div class="d-flex justify-content-center m-3">
+        	<h1>It is a {{ breed }}!</h1>
+        </div>
+        <div class="d-flex justify-content-center m-3">
+        	<img style="max-height:500px;max-width:500px;height:auto;width:auto;" src="/static/tmp/{{ path }}">
+        </div>
+        {% endif %}
+        </a>
         <form method=post enctype=multipart/form-data>
           <input type=file name=file value="Upload Image" class="btn btn-primary">
          <!--  <input type=submit value="Upload Image" class="btn btn-primary"> -->
