--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
       <a class="nav-item nav-link active" href="{{url_for('index')}}">Home<span class="sr-only">(current)</span></a>
       {% if current_user.is_authenticated %}
       <a class="nav-item nav-link" href="{{url_for('logout')}}">Log out</a>
-      <a class="nav-item nav-link" href="#">My Page</a>
+      <a class="nav-item nav-link" href="{{url_for('user_fav_page', username=current_user.username)}}">My Dogs</a>
       {% else %}
       <a class="nav-item nav-link" href="{{url_for('signup')}}">Sign up</a>
       <a class="nav-item nav-link" href="{{url_for('login')}}">Log in</a>
