--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -3,7 +3,7 @@
 
 {%block content%}
 <div class="jumbotron">
-    <h1>Welcome!{{current_user.username}}</h1>
+    <h1>Welcome!{{user.username}}</h1>
     
 
 </div>
