added gender and age info for dogs

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,7 @@
           <div class="col-xs-12 lpad text-center">
               <a href="#/dog/{{ dog.id }}" class="name">{{ dog.name }}</a>
               <a href="#"><img src="../static/like_sign_2x.png" width="25" alt="Add to favorites"></a>
+              <p><br>{{ dog.gender }} &bull; {{ dog.age }}</p>
           </div>
 
       </div>
