changed like button size and margin between information

--- a/templates/index.html
+++ b/templates/index.html
@@ -65,8 +65,8 @@
           </a>
           <div class="col-xs-12 lpad text-center">
               <a href="#/dog/{{ dog.id }}" class="name">{{ dog.name }}</a>
-              <a href="#"><img src="../static/like_sign_2x.png" width="25" alt="Add to favorites"></a>
-              <p><br>{{ dog.gender }} &bull; {{ dog.age }}</p>
+              <a href="#"><img src="../static/like_sign_2x.png" width="35" alt="Add to favorites"></a>
+              <p>{{ dog.gender }} &bull; {{ dog.age }}</p>
           </div>
 
       </div>
