--- a/templates/index.html
+++ b/templates/index.html
@@ -59,16 +59,19 @@
     <div class="row m-3">
     {% for dog in dogs %}
       <div class="col-md-6 col-lg-4">
-
+        <div class="img-thumbnail dog-container">
           <a href="#/dog/{{ dog.id }}">
-            <img src="{{ dog.photo_large }}" alt="dog picture" class="dog-image" width="100%">
+            <div class="image">
+              <span class="helper"></span>
+              <img src="{{ dog.photo_large }}" alt="dog picture" class="dog-image" width="100%">
+            </div>
           </a>
           <div class="col-xs-12 lpad text-center">
               <a href="#/dog/{{ dog.id }}" class="name">{{ dog.name }}</a>
               <a href="#"><img src="../static/like_sign_2x.png" width="35" alt="Add to favorites"></a>
               <p>{{ dog.gender }} &bull; {{ dog.age }}</p>
           </div>
-
+        </div>
       </div>
     {% endfor %}
     </div>
