created getters and setters for existing Dog properties

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
           <a href="#/dog/{{ dog.id }}">
             <div class="image">
               <span class="helper"></span>
-              <img src="{{ dog.photo_large }}" alt="dog picture" class="dog-image" width="100%">
+              <img src="{{ dog.photo_thumbnail }}" alt="dog picture" class="dog-image" width="100%">
             </div>
           </a>
           <div class="col-xs-12 lpad text-center">
