--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,82 +1,86 @@
 .btn-primary {
-  width: 100%;
-  height: 36px;
-  border-radius: 8px;
-  border: solid 2px #74716e;
-  background-color: #e5dfdd;
-  font-family: AppleGothic;
-  font-size: 16px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #000000;
+    width: 100%;
+    height: 36px;
+    border-radius: 8px;
+    border: solid 2px #74716e;
+    background-color: #e5dfdd;
+    font-family: AppleGothic;
+    font-size: 16px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #000000;
 }
 
 .name {
-  border-radius: 8px;
-  border: solid 2px #74716e;
-  background-color: #e5dfdd;
-  font-family: AppleGothic;
-  font-size: 16px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #000000;
-  padding: .5em .5em;
+    border-radius: 8px;
+    border: solid 2px #74716e;
+    background-color: #e5dfdd;
+    font-family: AppleGothic;
+    font-size: 16px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #000000;
+    padding: .5em .5em;
 }
 
-.vpad{
-  height: 200px;
+.vpad {
+    height: 200px;
 }
 
 .dog-image {
-  padding: 0% 10% 0% 10%;
-  margin: 0px auto;
+    padding: 0% 10% 0% 10%;
+    margin: 0px auto;
 }
 
 .lpad {
-  margin: 0 auto;
-  text-align: center;
-  padding: 10% 0% 0% 0%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 10% 0% 0% 0%;
 }
 
-.image{
-  position: relative;
-  overflow: hidden;
-  padding-bottom: 100%;
+.lpad p {
+    margin-top: 10px;
+}
+
+.image {
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 100%;
 }
 
 .image img {
-  position: absolute;
+    position: absolute;
 }
 
 .dog-container {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 .footer {
-  background-image: url("../bottom_background.png");
-  background-position: center bottom;
-  background-repeat: no-repeat;
-  background-size: 100%;
-/*  position: fixed; */
-/*  height: 50%;
-  width: 100%;*/
-  min-height: 360px;
+    background-image: url("../bottom_background.png");
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    /*  position: fixed; */
+    /*  height: 50%;
+      width: 100%;*/
+    min-height: 360px;
 }
 
-.feature{
-  margin: 0 auto;
-  text-align: center;
+.feature {
+    margin: 0 auto;
+    text-align: center;
 }
 
 .hero {
-  /*background-image: url("../static/top_background.png");*/
-  background-color: #e7e0de;
+    /*background-image: url("../static/top_background.png");*/
+    background-color: #e7e0de;
 }
 
 .hero-image {
@@ -94,4 +98,25 @@
     background-repeat: no-repeat;
     background-size: 100%;
     /*position: relative;*/
-  }
+}
+
+.fa {
+    display: inline-block;
+    height: 32px;
+    width: 35px;
+    font-size: inherit;
+    text-rendering: auto;
+    margin-bottom: -10px;
+    margin-left: 10px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.liked_dog {
+    content: url("../heart@2x.png");
+
+}
+
+.unliked_dog {
+    content: url("../heart@2x_empty.png");
+}
