--- a/templates/index.html
+++ b/templates/index.html
@@ -87,14 +87,16 @@
                         <div class="col-xs-12 lpad text-center">
                             <a href="{{ url_for('check_out_dog', dog_id=dog.id) }}" class="name">{{ dog.name }}</a>
                             {% if dog.id in fav_dogs %}
-                                <a href="{{ url_for('like_dog', dog_id=dog.id) }}">
-                                    <img src="../static/heart@2x.png" width="34"
-                                         alt="Remove from favorites">
+                                <a title="Remove from favorites" href="{{ url_for('like_dog', dog_id=dog.id) }}">
+                                    <!--<img src="../static/heart@2x.png" width="34"
+                                         alt="Remove from favorites">-->
+                                    <i class="fa liked_dog"></i>
                                 </a>
                             {% else %}
-                                <a href="{{ url_for('like_dog', dog_id=dog.id) }}">
-                                    <img src="../static/heart@2x_empty.png" width="34"
-                                         alt="Add to favorites">
+                                <a title="Add to favorites" href="{{ url_for('like_dog', dog_id=dog.id) }}">
+                                    <!--<img src="../static/heart@2x_empty.png" width="34"
+                                         alt="Add to favorites">-->
+                                    <i class="fa unliked_dog"></i>
                                 </a>
                             {% endif %}
                             <p>{{ dog.gender }} &bull; {{ dog.age }}</p>
