added ajax request to add/remove favorite dog

--- a/templates/index.html
+++ b/templates/index.html
@@ -86,14 +86,22 @@
                         </a>
                         <div class="col-xs-12 lpad text-center">
                             <a href="{{ url_for('check_out_dog', dog_id=dog.id) }}" class="name">{{ dog.name }}</a>
-                            {% if dog.id in fav_dogs %}
-                                <a title="Remove from favorites" href="{{ url_for('like_dog', dog_id=dog.id) }}">
-                                    <!--<img src="../static/heart@2x.png" width="34"
-                                         alt="Remove from favorites">-->
-                                    <i class="fa liked_dog"></i>
-                                </a>
+                            {% if current_user.is_authenticated %}
+                                {% if dog.id in fav_dogs %}
+                                    <a title="Remove from favorites" href="#!">
+                                        <!--<img src="../static/heart@2x.png" width="34"
+                                             alt="Remove from favorites">-->
+                                        <i onclick="likeDog(this, {{ dog.id }})" class="fa liked_dog"></i>
+                                    </a>
+                                {% else %}
+                                    <a title="Add to favorites" href="#!">
+                                        <!--<img src="../static/heart@2x_empty.png" width="34"
+                                             alt="Add to favorites">-->
+                                        <i onclick="likeDog(this, {{ dog.id }})" class="fa unliked_dog"></i>
+                                    </a>
+                                {% endif %}
                             {% else %}
-                                <a title="Add to favorites" href="{{ url_for('like_dog', dog_id=dog.id) }}">
+                                <a title="You should log in to add to Favorites" href="{{ url_for('login') }}">
                                     <!--<img src="../static/heart@2x_empty.png" width="34"
                                          alt="Add to favorites">-->
                                     <i class="fa unliked_dog"></i>
