--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -30,7 +30,7 @@
 }
 
 .vpad {
-    height: 200px;
+    height: 100px;
 }
 
 .dog-image {
@@ -92,6 +92,7 @@
     /* Set a specific height */
     width: 100%;
     height: 420px;
+    max-width: 1300px;
 
     /* Position and center the image to scale nicely on all screens */
     background-position: center;
