--- a/templates/index.html
+++ b/templates/index.html
@@ -17,18 +17,22 @@
             </button>
         </div>
     {% endfor %}
-    <div class="container">
-        <div class="row hero d-none d-lg-block">
-            <div class="col-md-6 vpad"></div>
-            <div class="col-md-6"></div>
-            <div class="col-md-6"></div>
-            <div class="col-md-6">
-                <p>Lorem ipsum accumsan dui massa viverra curabitur libero per fermentum cubilia, fusce nunc urna
-                    quisque tortor ut ultricies sit malesuada mi, ac suscipit conubia placerat erat
-                </p>
-            </div>
-            <div class="col-xs-12 hero-image"></div>
+    <div class="container-fluid">
+            <div class="row hero d-lg-block"> 
+                <div class="row vpad d-none d-md-block"></div>
+                <div class="row">
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-6">
+                        <p>Lorem ipsum accumsan dui massa viverra curabitur libero per fermentum cubilia, fusce nunc urna
+                            quisque tortor ut ultricies sit malesuada mi, ac suscipit conubia placerat erat
+                        </p>
+                    </div>       
+                </div>
+                <div class="row hero-image mx-auto d-md-block d-none"></div>
         </div>
+        
+    </div>
+    <div class="container">
         <div class="row mt-5">
             <div class="col-xs-12 feature text-center">
                 {% if breed is defined %}
